# kernel-mcp

./: .gitignore  README.md  pyproject.toml
data/cutedsl/: cute_dsl_api_cute_0000.json  cute_dsl_api_cute_0001.json  cute_dsl_api_cute_0002.json  cute_dsl_api_cute_0003.json  cute_dsl_api_cute_0004.json  cute_dsl_api_cute_0005.json  cute_dsl_api_cute_0006.json  cute_dsl_api_cute_0007.json  cute_dsl_api_cute_0008.json  cute_dsl_api_cute_0009.json  cute_dsl_api_cute_0010.json  cute_dsl_api_cute_0011.json  cute_dsl_api_cute_0012.json  cute_dsl_api_cute_0013.json  cute_dsl_api_cute_0014.json  cute_dsl_api_cute_0015.json  cute_dsl_api_cute_0016.json  cute_dsl_api_cute_0017.json  cute_dsl_api_cute_0018.json  cute_dsl_api_cute_0019.json  cute_dsl_api_cute_0020.json  cute_dsl_api_cute_0021.json  cute_dsl_api_cute_0022.json  cute_dsl_api_cute_0023.json  cute_dsl_api_cute_0024.json  cute_dsl_api_cute_0025.json  cute_dsl_api_cute_0026.json  cute_dsl_api_cute_0027.json  cute_dsl_api_cute_0028.json  cute_dsl_api_cute_0029.json  cute_dsl_api_cute_0030.json  cute_dsl_api_cute_0031.json  cute_dsl_api_cute_0032.json  cute_dsl_api_cute_0033.json  cute_dsl_api_cute_0034.json  cute_dsl_api_cute_0035.json  cute_dsl_api_cute_0036.json  cute_dsl_api_cute_0037.json  cute_dsl_api_cute_0038.json  cute_dsl_api_cute_0039.json  (+237 more)
data/cutedsl_source/: example_ampere_call_bypass_dlpack.json  example_ampere_call_from_jit.json  example_ampere_cooperative_launch.json  example_ampere_dynamic_smem_size.json  example_ampere_elementwise_add.json  example_ampere_elementwise_apply.json  (+223 more)
tests/: sample_trace.json
(+1638 files in other folders)
