[project]
name = "nvidia-docs-mcp"
version = "0.1.0"
description = "MCP server for NVIDIA PTX ISA and CuTe DSL documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.14.0",
    "openai>=1.0.0",
]

[project.scripts]
nvidia-docs-mcp = "nvidia_docs_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
